refactor: adopt Math.clamp and record patterns (Java 21, S6885/S6878)
- ArchitectureGraph depth/limit clamps: Math.max(1, Math.min(v, hi)) -> Math.clamp(v, 1, hi).
- Deconstruct FieldBinding.CrossComponent via record pattern in
  ArchitectureGraph + DataFlowTracer.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>